<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/normal_margin"
    android:paddingRight="@dimen/normal_margin"
    android:paddingTop="@dimen/normal_margin_top"
    android:id="@+id/scroll_view_login">


    <RelativeLayout
        android:id="@+id/linearlogin1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">

    <ImageView
        android:src="@drawable/loginpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:id="@+id/email"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_below="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:textAlignment="center"
            android:text="Login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpswd"
            android:id="@+id/textView2"
            android:paddingTop="@dimen/normal_margin_top"
            android:paddingBottom="5dp"
            android:layout_below="@+id/btn_login"
            android:layout_toLeftOf="@+id/logo"
            android:layout_toStartOf="@+id/logo" />

        <View
            android:id="@+id/view1"
            android:paddingTop="@dimen/normal_margin"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginTop="@dimen/normal_margin_top"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:paddingTop="@dimen/normal_margin_top"
                android:text="@string/register"
                android:layout_below="@+id/view1"
                android:textSize="@dimen/largefont"
                android:layout_alignLeft="@+id/view1"
                android:layout_alignStart="@+id/view1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                android:paddingTop="@dimen/normal_margin_top"
                android:id="@+id/textView"
                android:onClick="guest"
                android:textSize="@dimen/largefont"
                android:layout_alignTop="@+id/view1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


    </RelativeLayout>
</ScrollView>